On multileg tests