@@ -24,7 +24,7 @@ dependencies {
     implementation 'org.agrona:agrona:1.23.1'
 
     // SBE helpers
-    implementation 'rupweb:ws-shared:1.0.3'
+    implementation 'rupweb:ws-shared:1.0.23'
 
     // Websockets implementation 
     implementation 'io.netty:netty-all:4.1.114.Final'
@@ -49,6 +49,11 @@ java {
 
 application {
     mainClass = 'app.WsFrontEnd'
+
+    applicationDefaultJvmArgs = [
+        '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
+        '--add-exports=java.base/sun.nio.ch=ALL-UNNAMED'
+    ]
 }
 
 jacoco {
@@ -73,6 +78,11 @@ run {
 
 test {
     useJUnitPlatform()
+
+    jvmArgs = [
+        '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
+        '--add-exports=java.base/sun.nio.ch=ALL-UNNAMED'
+    ]
 
     // JVM forks
     forkEvery = 1
